Fix size of btn panel collapse

--- a/less/bootstrap-theme/panels.less
+++ b/less/bootstrap-theme/panels.less
@@ -12,6 +12,11 @@
 
         > .btn {
             margin: 2px;
+            min-width: auto;
+
+            &.btn-panel-collapse {
+                padding: 1px 5px;
+            }
         }
     }
 
